--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,15 @@
 <% provide(:title, 'Home') %>
-    <h1>Sample App</h1>
-    <p>
-      This is the home page for the
-      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
-    </p>
+    <p>Hello and welcome to the Techmasters website, a place for technological tutorials and assistance. Feel free to check out our Techmasters forum, though you will need to be a member to post.</p>
+    <h1>Need computer help or have a printer problem?</h1>
+    FORM GOES HERE.
+
+    <p>CURRENT PROBLEMS WITH THE WEBSITE: CANNOT GET THE JAVASCRIPT TO WORK FOR THE LINKS. SEE THE APPLICATION HTML PAGE AND THE APPLICATION JS PAGE FOR A REDO. ASK MR. HUGON WHAT PROBLEMS COULD BE.</p>
+
+    <p>To Do</p>
+    <ul>
+    	<li>Fix Javascript for the link headers.</li>
+    	<li>Add user accounts</li>
+    	<li>Add email form that sends email to all who have user accounts</li>
+    	<li>Add forum where anyone can view but only members can post.</li>
+    	<li>If I have time, add a moderating feature for one specific user, aka me.</li>
+    </ul>
