--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,210 @@
-// Place all the styles related to the StaticPages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*CSS that covers the top of the document.*/
+html
+{
+height: 100%;
+margin: 0;
+padding: 0;
+}
+body
+{
+background-color: #4f7aa5;
+height: 100%;
+font-family: cambria;
+font-size: 12px;
+color: #000000;
+margin: 0;
+padding: 0;
+}
+#container
+{
+	width: 100%;
+	height: 100%;
+}
+
+/*CSS that covers the top of the document.*/
+#top
+{
+	width: 100%;
+	height: 250px;
+	background-color: #4f7aa5;
+}
+#background
+{
+	position: absolute;
+	top: 10px;
+	left: 0px;
+	width: 960px;
+	height: 250px;
+	background-image: url('http://imageshack.us/a/img802/7410/sgnd.png');
+	background-repeat: no-repeat;
+}
+.image 
+{
+}
+
+/*CSS that covers the bottom of the document.*/
+#bottom
+{
+	width: 100%;
+	height: 100%;
+}
+#rightside
+{
+	float: left;
+	width: 60%;
+	height: 120%;
+	background-color: #eeece2;
+	opacity: 1;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	margin: 2%;
+	padding: 6px;
+	box-shadow: 10px 10px 3px #3d5e80;
+}
+
+#rightcontent
+{
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+}
+#leftside
+{
+	float: left;
+	width: 25%;
+	height: 100%;
+	opacity: 1;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	margin: 2%;
+	padding: 6px;
+	line-height: 25px;
+	font-size: 18px;
+	font-weight: bold;
+}
+#announcements
+{
+	width: 100%;
+	height: 30%;
+	background-color: #eeece2;
+	border: 1px dashed #ffffff;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	line-height: 13px;
+	font-size: 13px;
+	font-weight: normal;
+	text-align: center;
+	padding-top: 15px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-left: 5px;
+	margin-bottom: 5%;
+	overflow: auto;
+	box-shadow: 10px 10px 3px #3d5e80;
+}
+#about
+{
+	width: 100%;
+	height: 25%;
+	background-color: #eeece2;
+	border: 1px dashed #ffffff;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	line-height: 13px;
+	font-size: 13px;
+	font-weight: normal;
+	text-align: center;
+	padding-top: 15px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-left: 5px;
+	margin-bottom: 5%;
+	box-shadow: 10px 10px 3px #3d5e80;
+}
+#tutorials
+{
+	width: 100%;
+	height: 35%;
+	background-color: #eeece2;
+	border: 1px dashed #ffffff;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	line-height: 13px;
+	font-size: 13px;
+	font-weight: normal;
+	padding-top: 15px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-left: 5px;
+	box-shadow: 10px 10px 3px #3d5e80;
+}
+#footer
+{
+	float: left;
+	width: 100%;
+	height: 0.1%;
+}
+
+/*CSS for text and links.*/
+a.mainlink:link, a.mainlink:visited, a.mainlink:active {display: block; width: 90%; height: 25px; line-height: 25px; background-color: #143b63; color: #ffffff; font-size: 14px; font-family: cambria; text-decoration: none; text-align: center; border: 1px solid #ffffff; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; box-shadow: 3px 3px 4px #2e7899; -moz-transition: background-color 0.3s, -moz-transform 0.3s; -webkit-transition: background-color 0.3s, -webkit-transform 0.3s; transition: background-color 0.3s, transform 0.3s; margin-left: 15px;}
+a.mainlink:hover {color: #ffffff; background-color: #3c4957; text-decoration: none; border: 1px solid #ffffff; -moz-box-shadow: 3px 3px 4px #1f5066; -webkit-box-shadow: 3px 3px 4px #1f5066; box-shadow: 3px 3px 4px #1f5066;}
+
+a.link:link, a.link:visited, a.link:active { color: #000000; font-size: 13px; text-decoration: none; font-style: italic;}
+a.link:hover { color: #000000; font-size: 14px; text-decoration: none;}
+
+h1 { font-size: 20px; color: #000000; border-bottom: 1.5px solid #2e7899; text-align: right; }
+
+p.linkie 
+{
+	display: none; 
+	text-align: left; 
+	padding-left: 20px;
+	margin-bottom: 0;
+}
+p.righty
+{
+	margin-left: 5px;
+	margin-bottom: 0;
+}
+
+b { color: #143b63; }
+i { color: #143b63; }
+u { color: #143b63; }
+
+/*Accordion links!*/
+button {
+display: block; 
+width: 90%; 
+height: 25px; 
+line-height: 10px;
+background-color: #143b63; 
+color: #ffffff;
+font-size: 14px;
+font-family: cambria; 
+text-decoration: none; 
+text-align: center; 
+border: 1px solid #ffffff; 
+-webkit-border-radius: 5px; 
+-moz-border-radius: 5px; 
+border-radius: 5px; 
+box-shadow: 3px 3px 4px #2e7899; 
+-moz-transition: background-color 0.3s, -moz-transform 0.3s; 
+-webkit-transition: background-color 0.3s, -webkit-transform 0.3s; 
+transition: background-color 0.3s, transform 0.3s;
+margin-left: 15px;
+}
+button:hover
+{
+color: #ffffff; 
+background-color: #3c4957; 
+text-decoration: none; 
+border: 1px solid #ffffff; 
+-moz-box-shadow: 3px 3px 4px #1f5066; 
+-webkit-box-shadow: 3px 3px 4px #1f5066; 
+box-shadow: 3px 3px 4px #1f5066;
+}
