--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Orders#new</h1>
-<p>Find me in app/views/orders/new.html.erb</p>
+<% provide(:title, 'Sign up') %>
+<h1>Sign up</h1>
+
+<div class="row">
+  <div class="span6 offset3">
+    <%= form_for(@order) do |f| %>
+    	<%= render 'shared/error_messages', :object =>form.object %>
+
+    	<%= f.label :issue %>
+    	<%= f.text_field :issue %>
+
+    	<%= f.label :description %>
+    	<%= f.text_field :description %>
+
+    	<%= f.label :time, "Time You Are Available" %>
+    	<%= f.text_field :email %>
+
+        <%= f.label :status %>
+        <%= f.check_box :status %><br /><br />
+
+      <%= f.submit "Create my order", class: "btn btn-large btn-primary" %>
+    <% end %>
+  </div>
+</div>
