--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages', :object =>f.object %>
 
       <%= f.label :first %>
       <%= f.text_field :first %>
@@ -20,6 +20,9 @@
 
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
+
+      <%= f.label :techmasters %>
+      <%= f.check_box :techmasters %>
 
       <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
