--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,3 @@
 <% @orders.each do |order| %>
-   <li><%= order.first %> <%= order.last %></li>
+   <li><%= order.issue %></li><li><%= order.status %></li>
 <% end %>
