--- a/app/views/layouts/_bodycode.html.erb
+++ b/app/views/layouts/_bodycode.html.erb
@@ -25,11 +25,7 @@
 		</div>
 		<p class="righty">about the club</p>
 		<div id="about">
-		<!-- IMBEDDED RUBY HERE. WATCH SECTION BELOW!!! This uses the Rails helper link_to to make links, the first argument to link_to is the link text, while the second is the URL. The third argument is an options hash, in this case ading the CSS id logo to the sample app link. Note that this is completely optional.-->
-		I'm going to test links here. Let's try it!
-		<%= link_to "sample app", '#', id: "logo" %><br />
-		Other link test?
-		<li><%= link_to "Test Link to About Page", about_path %></li>
+		Techmasters is the on-campus technology group for Phillips Academy Andover. We were founded in 2005 by a dedicated group of students that wanted to bring Phillips Acadmy into the 21st century. This website currently functions as the main source of technology help.
 		</div>
 		<p class="righty">tutorials</p>
 		<div id="tutorials">
@@ -38,15 +34,17 @@
 						
 				<button class="linkbutton">Ruby Tutorials</button>
 				<p class="linkie">
-					You can put a link here.
+					Coming soon!
 				</p><br />
 						
 				<button class="linkbutton">HTML Tutorials</button>
 				<p class="linkie">
+					Coming soon!
 				</p><br />
 						
 				<button class="linkbutton">Windows Vista Tutorials</button>
 				<p class="linkie">
+					Coming soon!
 				</p><br />
 		</div>
 	</div>
