--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,2 @@
-<% @orders.each do |order| %>
-   <li><%= order.issue %></li><li><%= order.status %></li>
-<% end %>
+<!-- looks in the views/orders/_order.html.erb for partial -->
+<%= render @orders %>
