--- a/app/views/user_mailer/work_order.text.erb
+++ b/app/views/user_mailer/work_order.text.erb
@@ -1,1 +1,10 @@
-STUFF HERE
+Dear Techmaster,
+
+The following work order form has been filled submitted. It states the following: 
+Issue: <%=@order.issue %>
+Description: <%=@order.description %>
+Time of Availability: <%=@order.time %>
+Please visit the techmasters website to claim the order as your own if choose to do so.
+
+Thank you,
+~Your Friendly Neighborhood Webmaster (Claire Wolford)
