--- a/app/views/layouts/_body.html.erb
+++ b/app/views/layouts/_body.html.erb
@@ -8,12 +8,13 @@
 		<div id="announcements">
 		TESTER TIME!	
 			<% if signed_in? %>
-            <li><%= link_to "Users", '#' %></li>
+            <li><%= link_to "Users", 'users' %></li>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", current_user %></li>
                 <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                <li><%= link_to "Current Orders", new_user_order(:user_id=>current_user.id) %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
               </ul>
