--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,24 @@
 <% provide(:title, 'Contact') %>
-<h1>Contact</h1>
-Please work.
-Contact?
+
+<h1>
+If you have a question about joining techmasters, fixing a computer, or learning about technology in general, please feel free to contact any of the following board members. If another member of the club is more qualified to answer your question, a board member will refer you to the proper email address.</h1>
+
+<h1>Techmaster Board Members</h1>
+<p>James Herman (Co-President): jherman@andover.edu </ br>
+Technological specialties: Desktop programming, server administraiton, techmaster logistics</p>
+
+<p>Cifford Ressel (Co-President): cressel@andover.edu</ br>
+Technological specialties: Desktop programming languages, server administraiton, techmaster logistics</p>
+
+<p>Ravn Jenkins (Assistant to the President): rjenkins@andover.edu</ br>
+Technological specialties: techmaster logistics, work order management</p>
+
+<p>Claire Wolford (Webmaster): cwolford@andover.edu</ br>
+Technological specialties: techmaster website, markup languages</p>
+
+<p>Thayer Andverson (Server Administrator): tanderson@andover.edu</ br>
+Technological specialties: Desktop programming languages, server administration</p>
+
+<h1>Techmaster Availability<h1>
+<p>Techamsters are available from 6:30pm-8:30pm in the PACC on Monday and Tuesday nights. There will either be one or two techmasters available to receive any technological requests. Please note that techmasters can only help with software problems; we do not take responsibility for broken hardware. If you are unavailble during our primary assistance hours, you can send in a work order form on the homepage of this website. A techmaster will contact you about a potential meeting shortly after receiving the email.</ br>
+Techmasters meets on Wednesdays from 1:30pm-2:00pm in room 207 of Gelb.</p>
