--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,13 @@
 <html>
 
-<h1>List of Techmaster Users</h1>
+<h1>List of Users</h1>
 
-<% User.techyes.each do |u| %>
-	<%= u.first %> <%= u.last %> <%= u.id %>
-<%end%><br />
-
-<h1>Everybody Else</h1>
-
-<% User.techno.each do |z| %>
-	<%= z.first %> <%= z.last %> <%= z.id %>
-<%end%>
+<ul class="users">
+  <% @users.each do |users| %>
+    <li>
+      <%= User.first %> <%= User.last %>
+    </li>
+  <% end %>
+</ul>
 
 </html>
