--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<h1>Work orders will be sent automatically to Techmasters. Please fill out the following information:</h1>
+
+<h1>Work Order Form</h1>
 
 <div class="row">
   <div class="span6 offset3">
@@ -14,9 +16,6 @@
 
     	<%= f.label :time, "Time You Are Available" %>
     	<%= f.text_field :time %>
-
-        <%= f.label :status %>
-        <%= f.check_box :status %><br /><br />
 
       <%= f.submit "Create my order", class: "btn btn-large btn-primary" %>
     <% end %>
