--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,6 @@
 
 <center><%= link_to "Sign Up to Techmasters-Work!", signup_path, class: "btn btn-large btn-primary" %></center></ br>
 
-Problems with the site: users page lists the users in an encrypted format, work order creation success is styled wronng (having trouble altering the bootstrap correctly), email system needs to email the contents of the work order to each user. </ br>
+Problems with the site: work order creation success is styled wronng (having trouble altering the bootstrap correctly), email system needs to email the contents of the work order to each user. </ br>
 Note that the current email is not emailing users (don't know why, it was working before but now it isn't). When it does, I want it to send a copy of the work order created in the work order form.</ br>
 The last thing is that I've been have a couple routing issues with the "users" link. I realized that it works if coming from the homepage but not from other pages. I don't know what to change to fix that. Thougths?
