--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,9 +3,9 @@
 <h1>List of Users</h1>
 
 <ul class="users">
-  <% @users.each do |users| %>
+  <% @users.each do |user| %>
     <li>
-      <%= User.first %> <%= User.last %>
+      <%= user.first %> <%= user.last %>
     </li>
   <% end %>
 </ul>
